--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Inventory Management App</h1>
   <section>
-  <h2>Click the link to download the <a href="Inventory-Management-App.zip" download="Inventory Management App"</a> Inventory Management App.</h2>
+  <h2>Click the link to download the <a href="Inventory Management App.zip" download="Inventory Management App"</a> Inventory Management App.</h2>
   </section
 </body>
 </html>
