Update title and heading in index.html

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>DPMA</title>
+    <title>Inventory Management App Download</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
   <h1>Inventory Management App</h1>
   <section>
-  <h2>Click the link to download the <a href="Inventory Management App.zip" download="Inventory Management App"</a> Inventory Management App.</h2>
+      <h2>Click the link to download the <a href="Inventory Management App.zip" download="Inventory Management App"</a> Inventory Management App. </h2>
   </section
 </body>
 </html>
